@@ -1,3 +1,9 @@
+2002-03-28  Miguel Sofer  <msofer@users.sourceforge.net>
+
+	* generic/tclBasic.c (Tcl_EvalEx):
+	* tests/basic.test: avoid exceptional returns at level 0 
+	[Bug 219181] 
+
 2002-03-27  Don Porter  <dgp@users.sourceforge.net>
 
 	* doc/tcltest.n ([mainThread]):
